test/field/get_on_nil.lox
null.foo // error: only instances have field
